# entry-ros-task

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
ros2_ws/: verify_motion.py
ros2_ws/src/robot_arm/: package.xml  setup.cfg  setup.py
ros2_ws/src/robot_arm/launch/: robot.launch.py
ros2_ws/src/robot_arm/robot_arm/: pose_publisher.py  tf_publisher.py
ros2_ws/src/robot_arm/rviz/: robot.rviz
ros2_ws/src/robot_arm/urdf/: robot_arm.urdf
